Add sensors with GPS 2

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -3,6 +3,7 @@ network = Ieee802154Showcase
 
 **.arp.typename = "GlobalArp"
 **.netmaskRoutes = ""
+*.radioMedium.pathLoss.typename = "FreeSpacePathLoss" # module type
 *.radioMedium.backgroundNoise.power = -110dBm
 *.configurator.config = xmldoc("startopology.xml")
 *.configurator.addStaticRoutes = false
@@ -10,12 +11,18 @@ network = Ieee802154Showcase
 # app configuration
 *.sensor*.numApps = 1
 *.sensor*.app[*].typename = "UdpBasicApp"
-*.sensor*.app[*].destAddresses = "controller"
+*.sensor*.app[*].destAddresses = "sensor1 sensor2 sensor3 sensor4 sensor5"
 *.sensor*.app[*].destPort = 1000
 *.sensor*.app[*].sendInterval = 1s
 *.sensor*.app[*].startTime = uniform(0s,1s)
 *.sensor*.app[*].messageLength = 10Byte
 *.sensor*.app[*].packetName = "SensorData"
+*.sensor2.app[*].typeNode = "Router"
+*.sensor2.app[*].isGPS = true
+*.sensor3.app[*].typeNode = "Router"
+*.sensor3.app[*].isGPS = true
+*.sensor4.app[*].typeNode = "Router"
+*.sensor4.app[*].isGPS = true
 
 *.controller.numApps = 2
 *.controller.app[0].typename = "UdpBasicApp"
@@ -25,6 +32,8 @@ network = Ieee802154Showcase
 *.controller.app[0].startTime = exponential(1s)
 *.controller.app[0].messageLength = 10Byte
 *.controller.app[0].packetName = "ControlData"
+*.controller.type = "Controller"
+*.controller.isGPS = true
 
 *.controller.app[1].typename = "UdpSink"
 *.controller.app[1].localPort = 1000
